deploy: 5e4c5befc5c7e3388ceab9a61948705aac5e5416

--- a/photos/index.html
+++ b/photos/index.html
@@ -108,7 +108,7 @@
         <footer>
     <div class="mainContent footBar">
         <p class="aboutMe">
-            <a href="/about">
+            <a href="/blog/about">
                 About Me
             </a></p>
         <p class="copyright">@2022 By esmyy</p>
