deploy: 9040dcaab4e96b94e76f1d5cb886c4f8a3a5fb5c

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <link href="https://cdn.bootcdn.net/ajax/libs/viewerjs/1.11.3/viewer.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/esmyy/imghost@main/css/main.css">
+  <script src="//cdn.jsdelivr.net/gh/esmyy/imghost@main/js/helpers.umd.js">
+  </script>
   <script>
     var _hmt = _hmt || [];
   (function() {
@@ -32,12 +34,14 @@
 </head>
 
 <body>
+<div id="leancloudApp" style="display:none;" data-app-id="HIPSmz3qt9iZF654dkSgfXr2-MdYXbMMI" data-app-key="IIZyd4Ee0LH46v96sUQFgo7V" data-server-urls="https://ssapi.esmyy.com">
+</div>
 
 <div id="esmyy">
     
         <div class="firstScreen homeFirstPage" id="firstScreen" style="background-image: url(//cdn.jsdelivr.net/gh/esmyy/imghost@main/images/air-beijing-chengdu.jpg)">
   <div class="lifeCard">
-    <p>慎思，明辨，笃行</p>
+    <p>慎思笃行</p>
   </div>
   <div class="pictureIntroduction" style="color: #fff">
     <p></p>
