--- a/bb/index.html
+++ b/bb/index.html
@@ -19,6 +19,8 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <link href="https://cdn.bootcdn.net/ajax/libs/viewerjs/1.11.3/viewer.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/esmyy/imghost@main/css/main.css">
+  <script src="//cdn.jsdelivr.net/gh/esmyy/imghost@main/js/helpers.umd.js">
+  </script>
   <script>
     var _hmt = _hmt || [];
   (function() {
@@ -32,12 +34,14 @@
 </head>
 
 <body>
+<div id="leancloudApp" style="display:none;" data-app-id="HIPSmz3qt9iZF654dkSgfXr2-MdYXbMMI" data-app-key="IIZyd4Ee0LH46v96sUQFgo7V" data-server-urls="https://ssapi.esmyy.com">
+</div>
 
 <div id="esmyy">
     
         <div class="firstScreen " id="firstScreen" style="background-image: url(//cdn.jsdelivr.net/gh/esmyy/imghost@main/images/air-beijing-chengdu.jpg)">
   <div class="lifeCard">
-    <p>慎思，明辨，笃行</p>
+    <p>慎思笃行</p>
   </div>
   <div class="pictureIntroduction" style="color: #fff">
     <p></p>
@@ -92,9 +96,24 @@
   </a>
 </header>
         <main class="mainContent">
-            <div id="artitalk_main"></div>
-<script type="text/javascript" src="https://unpkg.com/artitalk"></script>
-<script>
+            <div id="artitalk_main" style="display:block;"></div>
+<div class="bbWrapper">
+    <input type="text" username="username">
+    <input type="password" username="password">
+        <button class="loginBtn">登录</button>
+</div>
+<script src="//cdn.jsdelivr.net/gh/esmyy/imghost@main/js/artitalk.js"></script>
+<script >
+const {
+appId,
+appKey,
+serverUrls
+} = window.hexoHelper.get_leancloud();
+new Artitalk({
+appId,
+appKey,
+serverUrls
+})
 const isPublisher = localStorage.getItem("SHUOSHUO_PUBLISHER");
 if (isPublisher) {
     new Artitalk({
